# swanstation

./: .gitlab-ci.yml  CMakeLists.txt  README.md  README.pt-br.md  TODO
.github/workflows/: cd.yml  ci.yml
dep/: CMakeLists.txt
dep/libchdr/: CMakeLists.txt
dep/libchdr/include/libchdr/: chd.h  coretypes.h
dep/libchdr/src/: libchdr_chd.c  libchdr_flac.c
dep/libretro-common/: CMakeLists.txt
dep/lzma/src/: Alloc.c
dep/stb/: CMakeLists.txt
dep/stb/include/: stb_image.h
dep/xbyak/xbyak/: xbyak.h  xbyak_util.h
dep/zlib/src/: deflate.c  trees.c  zutil.c  zutil.h
scripts/: gamesettings_to_libretro.py
src/: CMakeLists.txt  config.h.cmake
src/common/: CMakeLists.txt  align.h  assert.h  audio_stream.cpp  audio_stream.h  bitfield.h  bitutils.h  byte_stream.cpp  byte_stream.h  cd_image.cpp  cd_image.h  cd_image_bin.cpp  cd_image_chd.cpp  cd_image_cue.cpp  cd_image_device.cpp  cd_image_ecm.cpp  cd_image_hasher.cpp  cd_image_hasher.h  cd_image_m3u.cpp  cd_image_mds.cpp  cd_image_memory.cpp  cd_image_pbp.cpp  cd_image_ppf.cpp  cd_subchannel_replacement.cpp  cd_xa.h  crash_handler.cpp  cue_parser.cpp  cue_parser.h  dimensional_array.h  display.hlsl.h  error.cpp  error.h  event.cpp  event.h  fifo_queue.h  file_system.cpp  file_system.h  heap_array.h  image.cpp  image.h  (+27 more)
src/common/d3d11/: shader_cache.cpp  shader_cache.h  shader_compiler.cpp  shader_compiler.h  staging_texture.cpp  staging_texture.h  stream_buffer.cpp  stream_buffer.h  texture.cpp  texture.h
src/common/d3d12/: context.cpp  context.h  descriptor_heap_manager.cpp  descriptor_heap_manager.h  shader_cache.cpp  shader_cache.h  staging_texture.cpp  stream_buffer.cpp  stream_buffer.h  texture.cpp  texture.h  util.cpp  util.h
src/common/gl/: program.cpp  program.h  shader_cache.cpp  shader_cache.h  stream_buffer.cpp  texture.cpp  texture.h
src/common/vulkan/: builders.cpp  builders.h  context.cpp  context.h  shader_cache.cpp  shader_cache.h  shader_compiler.cpp  shader_compiler.h  staging_buffer.cpp  staging_texture.cpp  stream_buffer.cpp  stream_buffer.h  swap_chain.cpp  swap_chain.h  texture.cpp  texture.h  util.cpp  util.h
src/core/: CMakeLists.txt  analog_controller.cpp  analog_controller.h  analog_joystick.cpp  analog_joystick.h  bios.cpp  bios.h  bus.cpp  bus.h  cdrom.cpp  cdrom.h  cdrom_async_reader.cpp  cdrom_async_reader.h  cheats.cpp  cheats.h  controller.cpp  controller.h  cpu_code_cache.cpp  cpu_code_cache.h  cpu_core.cpp  cpu_core.h  cpu_core_private.h  cpu_recompiler_code_generator.cpp  cpu_recompiler_code_generator.h  cpu_recompiler_code_generator_aarch32.cpp  cpu_recompiler_code_generator_aarch64.cpp  cpu_recompiler_code_generator_generic.cpp  cpu_recompiler_code_generator_x64.cpp  cpu_recompiler_register_cache.cpp  cpu_recompiler_register_cache.h  cpu_recompiler_thunks.h  cpu_recompiler_types.h  cpu_types.cpp  cpu_types.h  digital_controller.cpp  digital_controller.h  dma.cpp  dma.h  gdb_protocol.cpp  gpu.cpp  (+65 more)
src/duckstation-libretro/: CMakeLists.txt  libretro_audio_stream.cpp  libretro_audio_stream.h  libretro_core_options.h  libretro_d3d11_host_display.cpp  libretro_game_settings.cpp  libretro_host_display.cpp  libretro_host_interface.cpp  libretro_host_interface.h  libretro_opengl_host_display.cpp  libretro_settings_interface.cpp  libretro_settings_interface.h  main.cpp
src/duckstation-qt/: consolesettingswidget.cpp
src/duckstation-regtest/: regtest_host_interface.cpp
src/frontend-common/: d3d11_host_display.h  game_settings.cpp  opengl_host_display.h  vulkan_host_display.h
src/libretro/: .gitignore  CMakeLists.txt  common_host_interface.h  display_ps.hlsl.h  display_ps_alpha.hlsl.h  display_vs.hlsl.h  game_settings.cpp  game_settings.h  libretro_audio_stream.cpp  libretro_audio_stream.h  libretro_core_options.h  libretro_core_options_intl.h  libretro_d3d11_host_display.cpp  libretro_d3d11_host_display.h  libretro_game_settings.cpp  libretro_game_settings.h  libretro_host_display.cpp  libretro_host_display.h  libretro_host_interface.cpp  libretro_host_interface.h  libretro_opengl_host_display.cpp  libretro_opengl_host_display.h  libretro_settings_interface.cpp  libretro_settings_interface.h  libretro_vulkan.h  libretro_vulkan_host_display.cpp  libretro_vulkan_host_display.h  main.cpp
src/scmversion/: gen_scmversion.bat  gen_scmversion.sh  scmversion.h
